--- a/css/addedStyles.css
+++ b/css/addedStyles.css
@@ -59,7 +59,7 @@ li{
 
 /* Annual Report */
 #annualReport{
-  background-image: url('../images/annualReport.gif');
+  background-color: #000;
   padding-bottom: 0;
 }
 
@@ -73,7 +73,7 @@ li{
   padding-bottom: 20px;
 }
 .annual{
-  background-image: url('../images/annualReport.gif');
+  background-color: #000;
 }
 .yr{
   padding-bottom: 2%;
