--- a/css/recentEvents.css
+++ b/css/recentEvents.css
@@ -1,8 +1,14 @@
 body{
-  background-color: #343A40;
+  background-color: #141618;
 }
 
 
 .gap{
 border-spacing: 3px;
+}
+
+p{
+  text-align: start;
+  font-family: Oxygen !important;
+  font-size: 50px;
 }
