--- a/css/addedStyles.css
+++ b/css/addedStyles.css
@@ -123,7 +123,7 @@ li{
 
 /* Data Row */
 #dataRow {
-  background-color: #000;
+  background-color: #7F838D;
   text-align: center;
   padding: 3%;
 }
