--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,12 @@ body a {
   -o-transition: 0.5s all;
   -ms-transition: 0.5s all;
 }
+.img-responsive {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
 p {
   text-align: center;
