--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,11 @@ body a {
   margin-right: auto;
   width: 65%;
 }
-
+.video-responsive {
+  margin-left: auto;
+  margin-right: auto;
+  width:75%
+}
 
 p {
   text-align: center;
