--- a/css/addedStyles.css
+++ b/css/addedStyles.css
@@ -3,6 +3,21 @@ body {
 }
 
 
+/* Video */
+
+.video {
+    /* align-content: center; */
+    /* width: 80%; */
+    /* height: 50%; */
+}
+
+.videoResponsive {
+    align-content: center;
+    width: 100%;
+    height: 600px%;
+}
+
+
 /* Blog */
 
 .blogIcon {
