--- a/css/addedStyles.css
+++ b/css/addedStyles.css
@@ -6,15 +6,15 @@ body {
 /* Video */
 
 .video {
-    /* align-content: center; */
+    align-items: center;
     /* width: 80%; */
     /* height: 50%; */
 }
 
 .videoResponsive {
-    align-content: center;
+    padding: 0 5%;
     width: 100%;
-    height: 600px%;
+    /* height: 600px%; */
 }
 
 
