--- a/css/style.css
+++ b/css/style.css
@@ -2679,8 +2679,8 @@ input:-ms-input-placeholder {
 .left {
   position: absolute;
   top: 75%;
-  left: 20%;
+  left: 35%;
   color: white;
-  font-size: 1.5cm;
+  font-size: 30px;
   transform: translate(-50%, -50%);
 }
